--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     container_name: simulator
     volumes:
       - .:/go/src/
-    external_links:
-      - "host.docker.internal:172.17.1.1"
+  #  external_links:
+   #   - "host.docker.internal:172.17.1.1"
